--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-BR">
 	<head>
 		<meta charset="UTF-8">
-		<title>Página HTML</title>
+		<title>PÃ¡gina HTML</title>
 	</head>
 
 	<body>
-		<h1>Página HTML</h1>
+		<h1>PÃ¡gina HTML</h1>
 	</body>
 </html>
