--- a/front-end/formulario.html
+++ b/front-end/formulario.html
@@ -22,7 +22,7 @@
     <hr>
 
     <h2>Formulário de Inscrição:</h2>
-    <form action="../back-end/index.php" method="GET">
+    <form action="../back-end/processa_form.php" method="GET">
         Nome:
         <input type="text" name="nome" value="Fulano">
 
